--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
+      <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
     </div>
     <!-- <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" area-expanded="false">
@@ -17,21 +17,21 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.title-img and site.subtitle-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}{{ site.baseurl }}">
           <img style=" float:left; display:inline" src="/img/{{ site.title-img }}" hspace=5px/>
           <img style=" float:left; display:inline" src="/img/{{ site.subtitle-img }}" hspace=5px/>
         </a>
       {% elsif site.title-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="/img/{{ site.title-img }}"/></a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}{{ site.baseurl }}"><img src="/img/{{ site.title-img }}"/></a>
       {% else %}
-        <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
+        <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
       {% endif %}
     </div> -->
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
-          <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+          <a href="{{ site.url }}{{ site.baseurl }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
         </li>
         
         {% comment %}
@@ -55,7 +55,7 @@
 	{% if site.gravatar and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="{{ site.url }} ">
+	    <a href="{{ site.url }}{{ site.baseurl }}">
 	      <img class="avatar-img" src="http://www.gravatar.com/avatar/{{ site.gravatar.hash }}?s={{ site.gravatar.size }}" />
             </a>
 	  </div>
