--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -44,7 +44,7 @@
           {% if node.title != null %}
             {% if node.layout == "page" and node.nav-include != false %}
               <li class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">
-                <a href="{{ node.url }}">{{ node.title }}{% if page.url == node.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+                <a href="{{ node.url | prepend: site.baseurl }}">{{ node.title }}{% if page.url == node.url %} <span class="sr-only">(current)</span>{% endif %}</a>
               </li>
             {% endif %}
           {% endif %}
