--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
           {% if site.author.mvp and site.footer-links-active.mvp %}
           <li>
             <a href="https://mvp.microsoft.com/en-us/PublicProfile/{{ site.author.mvp }}" title="MVP Profile">
-              <img src="/img/MVP.png">
+              <img src="{{ site.baseurl }}/img/MVP.png">
             </a>
           </li>
           {% endif %}
