--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,11 +18,11 @@
       </button>
       {% if site.title-img and site.subtitle-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-          <img style=" float:left; display:inline" src="/img/{{ site.title-img }}" hspace=5px/>
-          <img style=" float:left; display:inline" src="/img/{{ site.subtitle-img }}" hspace=5px/>
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" hspace=5px/>
         </a>
       {% elsif site.title-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="/img/{{ site.title-img }}"/></a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
       {% else %}
         <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
