--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
   <title>
     {% if page.title == "Home" %}
-       {{ site.title }} - {{ site.subtitle }}
+       {{ site.title }} - {{ site.description }}
     {% else %}
        {{ page.title }} - {{ site.title }}
     {% endif %}
