--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,11 @@
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
           <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
         </li>
-        
+
+        <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
+          <a href="{{ site.perftesturl }}">Performance Tests{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+        </li>
+
         {% comment %}
           The code below dynamically generates a sidebar nav of pages with
           `layout: page` in the front-matter. See readme for usage.
