--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
-          <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+          <a href="{{ site.pgmexurl }}">PgMex Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
         </li>
 
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
