--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
   {% seo %}
 </head>
