--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -56,11 +56,11 @@
       </ul>
     </div>
 
-	{% if site.gravatar and (layout.show-avatar or page.show-avatar) %}
+	{% if site.avatar and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="{{ site.url }}">
-	      <img class="avatar-img" src="http://www.gravatar.com/avatar/{{ site.gravatar.hash }}?s={{ site.gravatar.size }}" />
+	      <img class="avatar-img" src="{{ site.baseurl }}/img/{{ site.avatar }}" />
             </a>
 	  </div>
 	</div>
