--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
   <div class="container-fluid">
-    <!-- <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" area-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
-    </div> -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" area-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -17,12 +8,14 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.title-img and site.subtitle-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.subtitle-url }}">
           <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" hspace=5px/>
         </a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}">
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
+        </a>
       {% elsif site.title-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
       {% else %}
         <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
