--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,10 +9,10 @@
       </button>
       {% if site.title-img and site.subtitle-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.subtitle-url }}">
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" hspace=5px/>
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" />
         </a>
         <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}">
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" />
         </a>
       {% elsif site.title-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
