--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,7 @@ img {
 }
 @media only screen and (max-width: 767px) {
   .navbar-custom .nav .navlinks-container.show-children {
-    background: #eee;
+    background: #151F26;
   }
   .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
     display: block;
@@ -234,7 +234,7 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .navbar-custom .nav .navlinks-container:hover {
-    background: #eee;
+    background: #151F26;
   }
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
     display: block;
