--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ img {
   display: block;
   padding: 10px;
   padding-left: 30px;
-  background: #f5f5f5;
+  background: #151F26;
   text-decoration: none !important;
   border-width: 0 1px 1px 1px;
   font-weight: normal;
