--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
         {% for link in site.navbar-links %}
           {% if link[1].first %}
             <li class="navlinks-container">
-              <a class="navlinks-parent" href="{{ site.url }}">{{ link[0] }}</a>
+              <a class="navlinks-parent" href="{{ page.url }}">{{ link[0] }}</a>
               <div class="navlinks-children">
                 {% for childlink in link[1] %}
                   {% for linkparts in childlink %}
