--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .navbar-custom .nav .navlinks-container:hover {
-    background: #151F26;
+    background: #262626;
   }
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
     display: block;
