--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,14 +8,12 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.title-img and site.subtitle-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.subtitle-url }}">
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
           <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" />
-        </a>
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}">
           <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" />
         </a>
       {% elsif site.title-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
       {% else %}
         <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
