--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,8 +9,8 @@
       </button>
       {% if site.title-img and site.subtitle-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" />
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" />
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" hspace=5px/>
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
         </a>
       {% elsif site.title-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
