--- a/css/main.css
+++ b/css/main.css
@@ -237,7 +237,6 @@ img {
     background: #151F26;
   }
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
-    background: #262626;
     display: block;
   }
   .navbar-custom .nav .navlinks-children {
@@ -248,6 +247,9 @@ img {
     padding-left: 10px;
     border: 1px solid #151F26;
     border-width: 0 1px 1px;
+  }
+  .navbar-custom .nav .navlinks-container .navlinks-children a:hover {
+    background: #262626;
   }
 }
 
