--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,9 @@ img {
   font-size: 12px;
   letter-spacing: 1px;
 }
+.navbar-custom .nav li a:hover {
+  background: #262626
+}
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
