--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ img {
   transition: padding .5s ease-in-out;  
 }
 .navbar-custom .navbar-brand-logo img {
-  height: 50px;
+  height: 40px;
   -webkit-transition: height .5s ease-in-out;
   -moz-transition: height .5s ease-in-out;
   transition: height .5s ease-in-out;
@@ -139,7 +139,7 @@ img {
   padding-top: 5px;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo img {
-  height: 40px;
+  height: 32px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -150,8 +150,16 @@ img {
     transition: background .5s ease-in-out,padding .5s ease-in-out;
   }
 
+  .navbar-custom .navbar-brand-logo img {
+    height: 50px;
+  }
+
   .navbar-custom.top-nav-short {
     padding: 0;
+  }
+
+  .navbar-custom.top-nav-short .navbar-brand-logo img {
+    height: 40px;
   }
 }
 
