--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
        {{ page.title }} - {{ site.title }} | {{ site.subtitle }}
     {% endif %}
   </title>
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} | {{ site.subtitle }} - {{ site.description }}" href="http://feeds.feedburner.com/AlliedTesting" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} | {{ site.subtitle }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
