--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
           {% endif %}
 		      {% if site.author.email and site.footer-links-active.email %}
           <li>
-            <a href="mailto:{{ site.author.email }}" title="Email me">
+            <a href="mailto:{{ site.author.email }}" title="Email us">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
