--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
       {% endif %}
     </div>
 
-    <div class="collapse navbar-collapse" >
+    <div class="navbar-header" >
       <ul class="nav navbar-nav navbar-right">
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
           <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
