--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,13 @@
       {% else %}
         <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
       {% endif %}
-      <a class="nav navbar-nav navbar-right" style=" float:right;" href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+    </div>
+
+    <div class="navbar-header" style=" float:right;" >
+      <ul class="nav navbar-nav navbar-right">
+        <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
+          <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+        </li>
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
