--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,13 +21,13 @@
 
 
     <div class="navbar-header" >
-     <div class="navbar-home" >
+     <div class="navbar-home" style=" float: right; display:inline;" >
        <ul class="nav navbar-nav navbar-right">
          <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
            <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
          </li>
       </div>
-      <div class="collapse navbar-collapse" id="main-navbar">
+      <div class="collapse navbar-collapse" id="main-navbar" style=" float: right; display:inline;" >
         <ul class="nav navbar-nav navbar-right">
           <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
             <a href="{{ site.url }}">Home2{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
