--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -63,7 +63,7 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="navbar-home" style=" float:right; display:inline;" >
+      <div class="navbar-home" style=" float:right; display:inline-block;" >
        <ul class="nav navbar-nav navbar-right">
          <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
            <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
