--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,14 @@ img {
   height: 32px;
 }
 
+.navbar-custom .nav .navbar-home {
+  position: absolute;
+  left: 50%;
+  width: 50px;
+  margin-top: -10px;
+}
+
+
 @media only screen and (min-width: 768px) {
   .navbar-custom {
     padding: 20px 0;
@@ -168,6 +176,10 @@ img {
 
   .navbar-custom.top-nav-short .navbar-brand-logo img {
     height: 40px;
+  }
+
+  .navbar-custom .nav .navbar-home {
+    margin-top: -20px;
   }
 }
 
