--- a/css/main.css
+++ b/css/main.css
@@ -142,11 +142,15 @@ img {
   height: 32px;
 }
 
-.navbar-custom .nav .navbar-home {
+.navbar-custom .navbar-home-container {
+  opacity: 1;
   position: absolute;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
   left: 50%;
   width: 50px;
-  margin-top: -10px;
+  margin-top: -50px;
 }
 
 
@@ -178,8 +182,8 @@ img {
     height: 40px;
   }
 
-  .navbar-custom .nav .navbar-home {
-    margin-top: -20px;
+  .navbar-custom .nav .navbar-home-container {
+    margin-top: -40px;
   }
 }
 
