--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ img {
   transition: opacity 0.5s ease-in-out;
   left: 50%;
   width: 50px;
-  margin-top: -32px;
+  margin-top: -40px;
 }
 
 
@@ -182,7 +182,7 @@ img {
     height: 40px;
   }
 
-  .navbar-custom .nav .navbar-home-container {
+  .navbar-custom .navbar-home-container {
     margin-top: -40px;
   }
 }
