--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,8 +8,10 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.title-img and site.subtitle-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" hspace=5px/>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.subtitle-url }}">
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" >
+        </a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}">
           <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
         </a>
       {% elsif site.title-img %}
