--- a/css/main.css
+++ b/css/main.css
@@ -97,9 +97,10 @@ img {
 .long-text {
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 360px) {
   .long-text {
       font-size: 14px;
+      color: #0066FF;
   }
 }
 
