--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
     <div class="navbar-home-container" >
       <ul class="nav navbar-nav navbar-right">
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
-          <a href="{{ site.url }}">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+          <a href="{{ site.url }}" style=" font-size:18px; font-weight:900; ">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
         </li>
     </div>
 
