--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
           {% endif %}
 		      {% if site.author.email and site.footer-links-active.email %}
           <li>
-            <a href="mailto:{{ site.author.email }}" title="Email me">
+            <a href="mailto:{{ site.author.email }}" title="Email us">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
@@ -72,12 +72,13 @@
           {% endif %}
           {% if site.footer-links-active.rss %}
           <li>
-          <a href="{{ site.feedburner }}" title="RSS">
-            <span class="fa-stack fa-lg">
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-            </span>
-          </a>
+            <a href="{{ '/feed.xml' | prepend: site.baseurl }}" title="RSS">
+              <span class="fa-stack fa-lg" aria-hidden="true">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+              </span>
+              <span class="sr-only">RSS</span>
+            </a>
           </li>		
           {% endif %}		  
       </ul>
