--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
   <div class="container-fluid">
-    <!-- <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" area-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
-    </div> -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" area-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -17,9 +8,11 @@
         <span class="icon-bar"></span>
       </button>
       {% if site.title-img and site.subtitle-img %}
-        <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}">
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.subtitle-url }}">
+          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" >
+        </a>
+        <a class="navbar-brand navbar-brand-logo" href="{{ site.title-url }}">
           <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.title-img }}" hspace=5px/>
-          <img style=" float:left; display:inline" src="{{ site.baseurl }}/img/{{ site.subtitle-img }}" hspace=5px/>
         </a>
       {% elsif site.title-img %}
         <a class="navbar-brand navbar-brand-logo" href="{{ site.url }}"><img src="{{ site.baseurl }}/img/{{ site.title-img }}"/></a>
@@ -28,16 +21,34 @@
       {% endif %}
     </div>
 
-    <div class="collapse navbar-collapse" id="main-navbar">
+    <div class="navbar-home-container" >
       <ul class="nav navbar-nav navbar-right">
         <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
-          <a href="{{ site.pgmexurl }}">PgMex Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
+          <a href="{{ site.url }}" style=" font-size:18px; font-weight:900; ">Home{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
         </li>
+    </div>
 
-        <li class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}">
-          <a href="{{ site.perftesturl }}">Performance Tests{% if page.url == site.url %} <span class="sr-only">(current)</span>{% endif %}</a>
-        </li>
+    <div class="collapse navbar-collapse" id="main-navbar" >
+      <ul class="nav navbar-nav navbar-right">
 
+        {% for link in site.navbar-links %}
+          {% if link[1].first %}
+            <li class="navlinks-container">
+              <a class="navlinks-parent" href="#!">{{ link[0] }}</a>
+              <div class="navlinks-children">
+                {% for childlink in link[1] %}
+                  {% for linkparts in childlink %}
+                    {% include navbarlink.html link=linkparts %}
+                  {% endfor %}
+                {% endfor %}
+              </div>
+            </li>
+          {% else %}
+            <li>
+              {% include navbarlink.html link=link %}
+            </li>
+          {% endif %}
+        {% endfor %}
         {% comment %}
           The code below dynamically generates a sidebar nav of pages with
           `layout: page` in the front-matter. See readme for usage.
@@ -56,11 +67,11 @@
       </ul>
     </div>
 
-	{% if site.gravatar and (layout.show-avatar or page.show-avatar) %}
+	{% if site.avatar and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="{{ site.url }}">
-	      <img class="avatar-img" src="http://www.gravatar.com/avatar/{{ site.gravatar.hash }}?s={{ site.gravatar.size }}" />
+	      <img class="avatar-img" src="{{ site.baseurl }}/img/{{ site.avatar }}" />
             </a>
 	  </div>
 	</div>
