--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,15 @@ img {
     font-size: 16pt;
 }
 
+.long-text {
+}
+
+@media only screen and (max-width: 360px) {
+  .long-text {
+      font-size: 14px;
+  }
+}
+
 /* --- Navbar --- */
 
 .navbar-custom {
@@ -105,6 +114,9 @@ img {
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
+}
+.navbar-custom .nav li a:hover {
+  background: #262626
 }
 
 .navbar-custom .navbar-brand,
@@ -121,23 +133,35 @@ img {
 }
 
 .navbar-custom .navbar-brand-logo {
-  padding-top: 0;
+  padding-top: 5px;
   -webkit-transition: padding .5s ease-in-out;
   -moz-transition: padding .5s ease-in-out;
   transition: padding .5s ease-in-out;  
 }
 .navbar-custom .navbar-brand-logo img {
-  height: 50px;
+  height: 40px;
   -webkit-transition: height .5s ease-in-out;
   -moz-transition: height .5s ease-in-out;
   transition: height .5s ease-in-out;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo {
-  padding-top: 5px;
+  padding-top: 10px;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo img {
-  height: 40px;
+  height: 32px;
 }
+
+.navbar-custom .navbar-home-container {
+  opacity: 1;
+  position: absolute;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+  left: 50%;
+  width: 50px;
+  margin-top: -50px;
+}
+
 
 @media only screen and (min-width: 768px) {
   .navbar-custom {
@@ -147,8 +171,28 @@ img {
     transition: background .5s ease-in-out,padding .5s ease-in-out;
   }
 
+  .navbar-custom .navbar-brand-logo {
+    padding-top: 0;
+  }
+
+  .navbar-custom .navbar-brand-logo img {
+    height: 50px;
+  }
+
   .navbar-custom.top-nav-short {
     padding: 0;
+  }
+
+  .navbar-custom.top-nav-short .navbar-brand-logo {
+    padding-top: 5px;
+  }
+
+  .navbar-custom.top-nav-short .navbar-brand-logo img {
+    height: 40px;
+  }
+
+  .navbar-custom .navbar-home-container {
+    margin-top: 0px;
   }
 }
 
@@ -160,11 +204,11 @@ img {
   transition: opacity 0.5s ease-in-out;
   left: 50%;
   width: 50px;
-  margin-top: -25px;
+  margin-top: -10px;
 }
 .navbar-custom .avatar-container  .avatar-img-border {
   width: 100%;
-  border-radius: 50%;
+  border-radius: 25%;
   margin-left: -50%;
   display: inline-block;
   box-shadow: 0 0 8px rgba(0, 0, 0, .8);
@@ -173,7 +217,7 @@ img {
 }
 .navbar-custom .avatar-container  .avatar-img {
   width: 100%;
-  border-radius: 50%;
+  border-radius: 25%;
   display: block;
 }
 
@@ -188,7 +232,7 @@ img {
 @media only screen and (min-width: 768px) {
   .navbar-custom .avatar-container {
     width: 100px;
-    margin-top: -50px;
+    margin-top: -20px;
   }
   
   .navbar-custom .avatar-container  .avatar-img-border {
@@ -207,6 +251,9 @@ img {
 .navbar-custom .nav .navlinks-container {
   position: relative;
 }
+.navbar-custom .nav .navlinks-container:hover {
+  background: #262626;
+}
 .navbar-custom .nav .navlinks-parent:after {
   content: " \25BC";
 }
@@ -219,33 +266,33 @@ img {
   display: block;
   padding: 10px;
   padding-left: 30px;
-  background: #f5f5f5;
+  background: #151F26;
   text-decoration: none !important;
   border-width: 0 1px 1px 1px;
-  font-weight: normal;
+  font-size: 12px;
+}
+.navbar-custom .nav .navlinks-container .navlinks-children a:hover {
+  background: #262626;
 }
 @media only screen and (max-width: 767px) {
   .navbar-custom .nav .navlinks-container.show-children {
-    background: #eee;
+    background: #151F26;
   }
   .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
     display: block;
   }
 }
 @media only screen and (min-width: 768px) {
-  .navbar-custom .nav .navlinks-container:hover {
-    background: #eee;
-  }
   .navbar-custom .nav .navlinks-container:hover .navlinks-children {
     display: block;
   }
   .navbar-custom .nav .navlinks-children {
     position: absolute;
-	text-align: center;
+	text-align: left;
   }
   .navbar-custom .nav .navlinks-container .navlinks-children a {
     padding-left: 10px;
-    border: 1px solid #eaeaea;
+    border: 1px solid #151F26;
     border-width: 0 1px 1px;
   }
 }
